# Private-project

./: .gitignore
Inference-with-C-CPI/: README.md
Inference-with-C-CPI/SSD_mobilenet_V2_coco/: CMakeLists.txt  SSD_inference.cpp
Inference-with-C-CPI/create_engine/: CMakeLists.txt  create_engine.cpp
Inference-with-C-CPI/inference/: CMakeLists.txt  inference.cpp
Inference-with-C-CPI/testC++/: opencv.cpp
deepstream-with-c-api/: CMakeLists.txt  README.md
deepstream-with-c-api/app/: CMakeLists.txt  DS_usb_cam.cpp  config_infer_primary_yoloV3.txt  dstest1_pgie_config.txt  dstest3_pgie_config.txt  obj.txt
deepstream-with-c-api/doc/: pipeline_with_v4l2src.txt
deepstream-with-c-api/include/: DS_usb_cam.hpp
deepstream-with-c-api/source/: CMakeLists.txt  DS_usb_cam.cpp
